session-6/inventory_service/inventory_deployment.yaml
# Deployment set for the Inventory App!!
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-pod-deployment
  namespace: coffee-shop
  labels:
    app: inventory-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-pod
  template:
    metadata:
      labels:
        app: inventory-pod
    spec:
      containers:
        - name: inventory-pod
          image: mishr3k/inventory_image
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "500m"
