session-6/inventory_service/inventory_service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: inventory-service
  namespace: coffee-shop
spec: 
  selector:
    app: inventory-pod
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
