session-6/inventory_service/inventory_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  namespace: coffee-shop
spec:
  ingressClassName: nginx
  rules:
    - host: localhost    # Replace with your domain
      http:
        paths:
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8082
